## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = lamport2

lamport2_SOURCES =  \
	banking.c \
	banking.h \
	bank_robbery.c \
	common.h \
	ipc.c \
	ipc.h \
	main.c \
	pa2345.h \
	process.c \
	process.h

lamport2_LDFLAGS = 

lamport2_LDADD =  \
	/home/linux/lamport2/src/libruntime.so

